# ai-product-playbook

./: .audit-allowlist.json  .coderabbit.yaml  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  Dockerfile.api  Dockerfile.worker  LLM-MAINTAINED-ENTERPRISE-PLAYBOOK.md  docker-compose.yml  eslint.config.js  nixpacks.toml  package-lock.json  package.json  playwright.config.ts  playwright.e2e.config.ts  pyproject.toml  tsconfig.base.json  tsconfig.json  turbo.json  vercel.json  vitest.config.ts  vitest.e2e.config.ts
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.storybook/: main.ts  preview.ts
docs/: API_CONTRACTS.md  ARCHITECTURE.md  CONSTRAINTS.md  DATA_MODEL.md  DECISIONS.md  DRILLS.md  E2E-TEST-REPORT.md  E2E-TEST-RUN-report.json  GITHUB_SECRETS.md  INCIDENTS.md  INFRA-E2E-AUDIT-2026-03-01.md  LEARNING_JOURNAL.md  MISSING-TESTS-AUDIT.md  MOAT-STACK-SETUP.md  PLAYBOOK-VALIDATION-REPORT.md  POST_DEPLOY.md  PRODUCT.md  PROJECT-AUDIT.md  SECRETS_INVENTORY.md  SECURITY.md  SLOs.md  STRATEGY-READINESS-TODOS.md  THREAT_MODEL.md
scripts/: architecture_limits_allowlist.json  audit-with-allowlist.js  block-main-commit.sh  capture-feedback.sh  check-ai-logging.sh  check-api-contracts.sh  check-api-contracts.ts  check-context-injection.sh  check-destructive-sql.sh  check-guardrail-usage.sh  check-langfuse-live.sh  check-pr-template.sh  check-preview-deploy.sh  check-rate-limit.sh  check-strategy-provider-policy.sh  check-user-identity.sh  check_architecture_limits.py  dev-local.sh  (+14 more)
(+203 files in other folders)
